[gd_scene load_steps=7 format=3 uid="uid://bwi726lmqxcs3"]

[ext_resource type="Script" uid="uid://6w4xc06fs82p" path="res://material_maker/nodes/comment/comment.gd" id="1"]
[ext_resource type="Script" uid="uid://s0k653ve15pr" path="res://material_maker/nodes/comment/palette_button.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bntuquclal2jq" path="res://material_maker/icons/color_palette.png" id="2_x7nyr"]
[ext_resource type="Texture2D" uid="uid://carfoptwr44o4" path="res://material_maker/icons/color_picker.png" id="3"]
[ext_resource type="Texture2D" uid="uid://7gf42vko52o1" path="res://material_maker/icons/close.tres" id="3_awsjf"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_awsjf"]

[node name="CommentNode" type="GraphElement"]
offset_left = 1.0
offset_top = 1.0
offset_right = 311.0
offset_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
resizable = true
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TitleBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBox/TitleBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Comment"

[node name="TitleEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBox/TitleBar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Comment"

[node name="ChangeColor" type="TextureButton" parent="PanelContainer/MarginContainer/VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_x7nyr")

[node name="Close" type="TextureButton" parent="PanelContainer/MarginContainer/VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_awsjf")

[node name="Text" type="TextEdit" parent="PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
mouse_filter = 1
placeholder_text = "Type your comment here"
wrap_mode = 1
caret_blink = true
caret_multiple = false

[node name="ResizerIcon" type="TextureRect" parent="PanelContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_awsjf")

[node name="Popup" type="PopupPanel" parent="."]
size = Vector2i(64, 64)

[node name="GridContainer" type="GridContainer" parent="Popup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 60.0
columns = 3

[node name="Color1" type="ColorRect" parent="Popup/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
script = ExtResource("2")

[node name="Color2" type="ColorRect" parent="Popup/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
script = ExtResource("2")

[node name="Color3" type="ColorRect" parent="Popup/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
script = ExtResource("2")

[node name="Color4" type="ColorRect" parent="Popup/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
script = ExtResource("2")

[node name="Color5" type="ColorRect" parent="Popup/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
script = ExtResource("2")

[node name="Color6" type="ColorRect" parent="Popup/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
script = ExtResource("2")

[node name="Color7" type="ColorRect" parent="Popup/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
script = ExtResource("2")

[node name="Color8" type="ColorRect" parent="Popup/GridContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
script = ExtResource("2")

[node name="ColorChooser" type="TextureRect" parent="Popup/GridContainer"]
layout_mode = 2
texture = ExtResource("3")

[node name="PopupSelector" type="PopupPanel" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="PopupSelector"]
offset_left = 4.0
offset_top = 4.0
offset_right = 302.0
offset_bottom = 545.0

[node name="ColorPicker" type="ColorPicker" parent="PopupSelector/PanelContainer"]
layout_mode = 2
edit_alpha = false

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="position_offset_changed" from="." to="." method="_on_position_offset_changed"]
[connection signal="raise_request" from="." to="." method="_on_raise_request"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="gui_input" from="PanelContainer/MarginContainer/VBox/TitleBar/Title" to="." method="_on_Title_gui_input"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBox/TitleBar/TitleEdit" to="." method="_on_title_edit_focus_exited"]
[connection signal="ready" from="PanelContainer/MarginContainer/VBox/TitleBar/TitleEdit" to="." method="_on_title_edit_ready"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBox/TitleBar/TitleEdit" to="." method="_on_title_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBox/TitleBar/ChangeColor" to="." method="_on_change_color_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBox/TitleBar/Close" to="." method="_on_close_pressed"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBox/Text" to="." method="_on_text_focus_exited"]
[connection signal="gui_input" from="PanelContainer/MarginContainer/VBox/Text" to="." method="_on_text_gui_input"]
[connection signal="ready" from="PanelContainer/MarginContainer/VBox/Text" to="." method="_on_text_ready"]
[connection signal="gui_input" from="Popup/GridContainer/ColorChooser" to="." method="_on_ColorChooser_gui_input"]
